--- a/_posts/내가 해냄/2023-05-24-daily-230524.md
+++ b/_posts/내가 해냄/2023-05-24-daily-230524.md
@@ -11,7 +11,7 @@ render_with_liquid: false
   figure { text-align: center; }
 </style>
 
-## ToC
+## Table of Contents
 - [모빌리티서비스](#모빌리티서비스)
 - [알고리즘](#알고리즘)
   - [처음 보는 문제 팀으로 해결하기](#처음-보는-문제-팀으로-해결하기)
