--- a/_posts/내가 해냄/2023-06-17-daily-230617.md
+++ b/_posts/내가 해냄/2023-06-17-daily-230617.md
@@ -11,7 +11,7 @@ render_with_liquid: false
   figure { text-align: center; }
 </style>
 
-## ToC
+## Table of Contents
 - [모빌리티서비스](#모빌리티서비스)
   - [초청 강연](#초청-강연)
     - [모빌리티](#모빌리티)
