--- a/_posts/내가 해냄/2023-05-11-daily-230511.md
+++ b/_posts/내가 해냄/2023-05-11-daily-230511.md
@@ -11,7 +11,7 @@ render_with_liquid: false
   figure { text-align: center; }
 </style>
 
-## ToC
+## Table of Contents
 - [모빌리티서비스](#모빌리티서비스)
 - [알고리즘](#알고리즘)
   - [동적 프로그래밍](#동적-프로그래밍)
