한영 폰트 포스트 업데이트

--- a/_posts/내가 해냄/2023-07-04-daily-230704.md
+++ b/_posts/내가 해냄/2023-07-04-daily-230704.md
@@ -22,3 +22,9 @@ render_with_liquid: false
 처음 빌드 성공하고서도 약간 실수가 있었는데 font-face 속성은 나중에 쓰는 게 우선적으로 적용되는 거라, 나눔고딕 베이스에 덮어쓰기를 하려면 제트브레인 폰트가 밑으로 가야 했다. 구글 링크에 있던 내용 그대로 붙여넣다 보니 제트브레인 폰트에 나눔고딕이 덮어쓰기 돼서 나눔고딕 폰트만 나왔었다. 지금은 고쳤다!
 
 지금 이 블로그 운영의 문제가 루비를 설치하지 않아서 변경 결과를 확인하려면 매번 커밋을 올려서 깃허브 액션으로 빌드된 블로그를 확인해야 한다는 건데, 오늘 wsl을 설치해보려다 너무 오래걸려서 포기했다. 다음부터 설정 바꿀 때는 리눅스 노트북으로 쓰든가 해야지 불편해서 쓰겠나..
+
+---
+
+23.07.08 업데이트 (2)
+
+생각을 해보니까 어차피 나눔고딕을 기본으로 쓰고, 영문자랑 숫자만 제트브레인으로 바꿀 거면 나눔고딕이라는 이름으로 제트브레인만 덮어씌우면 되는 거 아니었을까? 뭐하러 119개씩이나 되는 나눔고딕 font-face를 다 쓴 거야 그거 다 합치면 그냥 나눔고딕인데. 그래서 바꾸기로 했다. 하는 김에 모노 폰트도 바꿔서 나눔고딕이라는 이름에 영문자랑 숫자만 Roboto Mono 폰트로 덮어쓰기.
