카테고리 변경

--- a/_posts/IT/IT/2022-12-30-daily-221230.md
+++ b/_posts/IT/IT/2022-12-30-daily-221230.md
@@ -2,7 +2,7 @@
 title: "22.12.30 크롤링을 할 때는 IP 차단에 주의하자"
 author: dapin1490
 date: 2022-12-30 17:53:00 +09:00
-categories: [IT, 기타]
+categories: [IT, IT]
 tags: [지식, IT, 크롤링, Robots_txt]
 render_with_liquid: false
 ---
